PUG-246: Updates module identity domain admins;