@@ -3,27 +3,33 @@ package br.org.catolicasc.pug.identity.presenter;
 import br.org.catolicasc.pug.identity.constants.IdentityApiPaths;
 import br.org.catolicasc.pug.identity.domain.Admin;
 import br.org.catolicasc.pug.identity.infra.read.dtos.AdminView;
+import br.org.catolicasc.pug.identity.presenter.dtos.AccountStatusRequest;
+import br.org.catolicasc.pug.identity.presenter.dtos.AdminComplexSearchRequest;
 import br.org.catolicasc.pug.identity.presenter.dtos.AdminCreateRequest;
 import br.org.catolicasc.pug.identity.presenter.dtos.AdminResponse;
 import br.org.catolicasc.pug.identity.presenter.dtos.AdminUpdateRequest;
 import br.org.catolicasc.pug.identity.presenter.mappers.AdminPresenter;
-import br.org.catolicasc.pug.identity.service.AdminReadService;
-import br.org.catolicasc.pug.identity.service.AdminService;
+import br.org.catolicasc.pug.identity.service.AdminsReadService;
+import br.org.catolicasc.pug.identity.service.AdminsService;
 import br.org.catolicasc.pug.identity.service.AuthService;
-import br.org.catolicasc.pug.identity.service.PasswordService;
+import br.org.catolicasc.pug.identity.service.dtos.AdminComplexSearchCriteria;
 import br.org.catolicasc.pug.shared.exceptions.AppValidationException;
 import br.org.catolicasc.pug.shared.exceptions.DuplicateResourceException;
 import br.org.catolicasc.pug.shared.exceptions.ResourceNotFoundException;
 import br.org.catolicasc.pug.shared.i18n.I18n;
+import br.org.catolicasc.pug.shared.presenter.dtos.PageResponse;
 import br.org.catolicasc.pug.shared.presenter.rest.ApiEnvelope;
+import br.org.catolicasc.pug.shared.service.dtos.PageQuery;
+import br.org.catolicasc.pug.shared.utils.CollectionUtils;
 import br.org.catolicasc.pug.shared.utils.PresenterUtils;
-import br.org.catolicasc.pug.shared.utils.StringUtils;
 import br.org.catolicasc.pug.shared.validation.UuidV7;
 import jakarta.annotation.security.RolesAllowed;
 import jakarta.inject.Inject;
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.Min;
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.DELETE;
+import jakarta.ws.rs.DefaultValue;
 import jakarta.ws.rs.GET;
 import jakarta.ws.rs.PATCH;
 import jakarta.ws.rs.POST;
@@ -41,25 +47,23 @@ import java.net.URI;
 import java.util.List;
 import java.util.Locale;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
- * REST API Resource controller for managing Administrator profiles.
+ * REST API resource controller for managing Administrator profiles.
  *
- * <p>This class exposes endpoints to create, retrieve, update, patch, and revoke administrative
- * privileges. It delegates commands to the {@link AdminService} (writes) and queries to the {@link
- * AdminReadService} (reads), strictly adhering to CQRS principles.
+ * <p>This class exposes endpoints to create, retrieve, update, search, and revoke administrative
+ * privileges. It delegates commands to the {@link AdminsService} (writes) and queries to the {@link
+ * AdminsReadService} (reads), strictly adhering to CQRS principles.
  */
 @Path(IdentityApiPaths.ADMINS)
 @Consumes(MediaType.APPLICATION_JSON)
 @Produces(MediaType.APPLICATION_JSON)
 @RolesAllowed("ADMIN")
-public class AdminResource {
+public class AdminsResource {
 
   @Inject AuthService authService;
-  @Inject PasswordService passwordService;
-  @Inject AdminReadService readService;
-  @Inject AdminService writeService;
+  @Inject AdminsReadService readService;
+  @Inject AdminsService writeService;
   @Inject I18n i18n;
 
   @Context HttpHeaders headers;
@@ -76,8 +80,8 @@ public class AdminResource {
   @GET
   @Path("{id}")
   public Response get(@PathParam("id") @UuidV7 UUID id) {
-    AdminView v = readService.getViewByAccountId(id);
-    AdminResponse body = AdminPresenter.toResponse(v, locale(), i18n);
+    AdminView view = readService.getViewById(id);
+    AdminResponse body = AdminPresenter.toResponse(view, locale(), i18n);
     return Response.ok(ApiEnvelope.ok(body)).build();
   }
 
@@ -85,81 +89,88 @@ public class AdminResource {
    * Retrieves the administrator profile associated with the currently authenticated account.
    *
    * <p>The account identifier is resolved from the JWT {@code accountId} claim via {@link
-   * AuthService}, ensuring that callers can only access their own administrator profile. This
-   * endpoint is restricted to users with the ADMIN role.
+   * AuthService}, ensuring that callers can only access their own administrator profile.
    *
    * @return an HTTP 200 OK response containing an {@link ApiEnvelope} with the {@link
    *     AdminResponse}
-   * @throws jakarta.ws.rs.NotAuthorizedException if the token is missing, invalid, or does not
-   *     contain the required {@code accountId} claim
    */
   @GET
   @Path("me")
   public Response getMe() {
     UUID accountId = authService.getCurrentAccountId();
-    AdminView v = readService.getViewByAccountId(accountId);
-    AdminResponse body = AdminPresenter.toResponse(v, locale(), i18n);
+    AdminView view = readService.getViewByAccountId(accountId);
+    AdminResponse body = AdminPresenter.toResponse(view, locale(), i18n);
     return Response.ok(ApiEnvelope.ok(body)).build();
   }
 
   /**
-   * Retrieves administrators, optionally filtered by query parameters.
+   * Retrieves administrators, optionally filtered by a collection of linked account identifiers.
    *
-   * <p>When {@code email} is provided, this endpoint returns the administrator linked to that
-   * account email. When {@code cpf} is provided, it returns the administrators associated with that
-   * CPF. If neither identifier is present, it falls back to name-based search with {@code q} or
-   * lists all administrators when no filters are supplied.
+   * <p>When one or more {@code ids} query parameters are provided, this endpoint returns only the
+   * corresponding administrators. Otherwise, it returns the complete administrator list ordered
+   * according to the underlying query implementation.
    *
-   * @param query the optional search query string
-   * @param emailRaw the optional email used to retrieve a single administrator
-   * @param cpfRaw the optional CPF used to retrieve the administrators associated with a user
-   * @return an HTTP 200 OK response containing an {@link ApiEnvelope} with either a single {@link
-   *     AdminResponse} or a list of {@link AdminResponse}
+   * @param ids the optional linked-account identifiers used to restrict the returned collection
+   * @return an HTTP 200 OK response containing an {@link ApiEnvelope} with a list of {@link
+   *     AdminResponse}
    */
   @GET
-  public Response list(
-      @QueryParam("q") String query,
-      @QueryParam("email") String emailRaw,
-      @QueryParam("cpf") String cpfRaw) {
-    if (StringUtils.isNotEmpty(emailRaw)) {
-      AdminView view = readService.getViewByEmail(emailRaw);
-      AdminResponse body = AdminPresenter.toResponse(view, locale(), i18n);
-      return Response.ok(ApiEnvelope.ok(body)).build();
-    }
-
-    if (StringUtils.isNotEmpty(cpfRaw)) {
-      List<AdminResponse> list =
-          readService.listViewsByCpf(cpfRaw).stream()
-              .map(v -> AdminPresenter.toResponse(v, locale(), i18n))
-              .collect(Collectors.toList());
-
-      return Response.ok(ApiEnvelope.ok(list)).build();
-    }
-
-    List<AdminView> views;
-
-    if (StringUtils.isNotEmpty(query)) {
-      views = readService.search(query);
-    } else {
-      views = readService.listViews();
-    }
-
+  public Response list(@QueryParam("ids") List<UUID> ids) {
+    List<AdminView> views =
+        CollectionUtils.isEmpty(ids) ? readService.listViews() : readService.listViewsByIds(ids);
     List<AdminResponse> list =
-        views.stream()
-            .map(v -> AdminPresenter.toResponse(v, locale(), i18n))
-            .collect(Collectors.toList());
-
+        views.stream().map(v -> AdminPresenter.toResponse(v, locale(), i18n)).toList();
     return Response.ok(ApiEnvelope.ok(list)).build();
+  }
+
+  /**
+   * Executes paginated administrator search using the complex-search contract.
+   *
+   * @param page the zero-based page index
+   * @param size the requested page size; {@code 1} returns the full result set in a single page
+   * @param request the optional complex-search filters
+   * @return an HTTP 200 OK response containing an {@link ApiEnvelope} with the paginated search
+   *     result
+   */
+  @POST
+  @Path("search")
+  public Response search(
+      @QueryParam("page") @DefaultValue("0") @Min(0) int page,
+      @QueryParam("size") @DefaultValue("25") @Min(1) int size,
+      @Valid AdminComplexSearchRequest request) {
+    AdminComplexSearchCriteria criteria =
+        request == null
+            ? new AdminComplexSearchCriteria(null, null, null, null, null, true)
+            : new AdminComplexSearchCriteria(
+                request.name(),
+                request.cpf(),
+                request.email(),
+                request.dateFrom(),
+                request.dateTo(),
+                request.activeOnly() == null || request.activeOnly());
+
+    var result = readService.search(new PageQuery(page, size), criteria);
+    var responseBody =
+        new PageResponse<>(
+            result.content().stream()
+                .map(v -> AdminPresenter.toComplexSearchResponse(v, locale(), i18n))
+                .toList(),
+            result.page(),
+            result.size(),
+            result.totalElements(),
+            result.totalPages());
+
+    return Response.ok(ApiEnvelope.ok(responseBody)).build();
   }
 
   /**
    * Registers a new administrator within the platform.
    *
    * <p>This endpoint processes an aggregated payload, automatically handling the provisioning of
-   * the underlying user and authentication account.
+   * the underlying user and authentication account. Password setup is intentionally deferred, so
+   * the newly created account starts without a stored password hash.
    *
-   * @param req the validated {@link AdminCreateRequest} containing the identity, credentials, and
-   *     campus
+   * @param req the validated {@link AdminCreateRequest} containing the identity and campus data
    * @return an HTTP 201 Created response containing a {@code Location} header and the created
    *     {@link AdminResponse}
    * @throws DuplicateResourceException if an admin with the same email/CPF already exists
@@ -167,9 +178,7 @@ public class AdminResource {
    */
   @POST
   public Response create(@Valid AdminCreateRequest req) {
-    String hashedPassword = passwordService.hash(req.password());
-    var cmd = AdminPresenter.toCommand(req, hashedPassword);
-
+    var cmd = AdminPresenter.toCommand(req);
     Admin admin = writeService.save(cmd);
 
     AdminResponse body =
@@ -180,24 +189,22 @@ public class AdminResource {
   }
 
   /**
-   * Partially updates an existing administrator's details.
+   * Updates an existing administrator's details.
    *
-   * <p>Omitting fields in the request payload will result in those fields retaining their current
-   * state in the database.
+   * <p>This endpoint accepts the account and campus fields that remain editable through the admin
+   * maintenance workflow. Password and activation state changes are handled by dedicated flows.
    *
    * @param id the unique identifier (UUIDv7) of the admin's account
    * @param req the validated {@link AdminUpdateRequest} containing the modified data
    * @return an HTTP 200 OK response containing the updated {@link AdminResponse}
    * @throws ResourceNotFoundException if the admin does not exist
-   * @throws DuplicateResourceException if an updated email/CPF conflicts with an existing record
+   * @throws DuplicateResourceException if an updated email conflicts with an existing record
    * @throws AppValidationException if input validation fails
    */
   @PUT
   @Path("{id}")
   public Response update(@PathParam("id") @UuidV7 UUID id, @Valid AdminUpdateRequest req) {
-    String hashedPassword = req.password() != null ? passwordService.hash(req.password()) : null;
-    var cmd = AdminPresenter.toCommand(req, hashedPassword);
-
+    var cmd = AdminPresenter.toCommand(req);
     Admin updatedAdmin = writeService.update(id, cmd);
 
     AdminResponse body =
@@ -208,26 +215,18 @@ public class AdminResource {
   }
 
   /**
-   * Applies a partial update to an existing administrator.
-   *
-   * <p>This endpoint supports the same partial payload semantics as {@link #update(UUID,
-   * AdminUpdateRequest)} and is also used for activation-state changes, such as setting {@code
-   * active} to {@code false} to deactivate the account.
+   * Updates the activation status of an existing administrator account.
    *
    * @param id the unique identifier (UUIDv7) of the admin's account
-   * @param req the validated {@link AdminUpdateRequest} containing the fields to change
+   * @param req the validated {@link AccountStatusRequest} containing the target activation flag
    * @return an HTTP 204 No Content response when the update succeeds
    * @throws ResourceNotFoundException if the admin does not exist
-   * @throws DuplicateResourceException if an updated email/CPF conflicts with an existing record
-   * @throws AppValidationException if input validation fails
+   * @throws AppValidationException if the resulting linked-account state is invalid
    */
   @PATCH
-  @Path("{id}")
-  public Response patch(@PathParam("id") @UuidV7 UUID id, @Valid AdminUpdateRequest req) {
-    String hashedPassword = req.password() != null ? passwordService.hash(req.password()) : null;
-    var cmd = AdminPresenter.toCommand(req, hashedPassword);
-
-    writeService.update(id, cmd);
+  @Path("{id}/status")
+  public Response updateStatus(@PathParam("id") @UuidV7 UUID id, @Valid AccountStatusRequest req) {
+    writeService.updateStatus(id, req.active());
     return Response.noContent().build();
   }
 
